Added status pages to server.

--- a/ktor/.gitignore
+++ b/ktor/.gitignore
@@ -54,6 +54,9 @@ out/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Additional files/dirs to unignore.
+!gradle/wrapper/*
+
 # Additional files/dirs to ignore.
 .idea/
 *.log.*
